[package]
name = "anvil-tools-rs"
version = "0.1.0"
authors = ["jellysquid3 <jellysquid3@users.noreply.github.com>"]
edition = "2018"

[dependencies]
flate2 = { version = "1.0", features = ["cloudflare_zlib"], default-features = false }
mapr = "0.8"
byteorder = "1.4"
hematite-nbt = { version = "0.5", default-features = false }
clap = { version = "3.0.0-beta.5" }
indicatif = { version = "0.17.0-beta.1", default-features = false }
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
lazy_static = "1.4.0"
atty = "0.2"

[patch.crates-io]
hematite-nbt = { path = './modules/hematite_nbt' }