[package]
name = "anvil-tools-rs"
version = "0.1.0"
authors = ["jellysquid3 <jellysquid3@users.noreply.github.com>"]
edition = "2018"

[dependencies]
flate2 = "1.0.24"
mapr = "0.8"
byteorder = "1.4"
fastnbt = "2.3"
clap = { version = "4.0.19", features = [ "derive" ] }
rayon = "1.5"
atty = "0.2"
tar = "0.4"
lru = "0.8"
indicatif = "0.17"
